add auto calc, fix #1

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -289,10 +289,60 @@
       "ATTACK_RARITY": "小攻击成长: {{ATTACK}}%",
       "HP_RARITY": "小生命成长: {{HP}}%",
       "DEFENSE_RARITY": "小防御成长: {{DEFENSE}}%",
+      "CRIT_RATE_AVERAGE": "暴击率平均: {{CRIT_RATE_ACTUAL_STR}}",
+      "CRIT_DMG_AVERAGE": "暴击伤害平均: {{CRIT_DMG_ACTUAL_STR}}",
+      "ELEMENTAL_MASTERY_AVERAGE": "精通平均: {{ELEMENTAL_MASTERY_ACTUAL_STR}}",
+      "ENERGY_RECHARGE_AVERAGE": "充能平均: {{ENERGY_RECHARGE_ACTUAL_STR}}",
+      "ATTACK_UP_AVERAGE": "大攻击平均: {{ATTACK_UP_ACTUAL_STR}}",
+      "HP_UP_AVERAGE": "大生命平均: {{HP_UP_ACTUAL_STR}}",
+      "DEFENSE_UP_AVERAGE": "大防御平均: {{DEFENSE_UP_ACTUAL_STR}}",
+      "SANDS_ATTACK_UP": "攻击沙",
+      "SANDS_HP_UP": "生命沙",
+      "SANDS_DEFENSE_UP": "防御沙",
+      "SANDS_ELEMENTAL_MASTERY": "精通沙",
+      "SANDS_ENERGY_RECHARGE": "充能沙",
+      "GOBLET_CRYO": "冰伤杯",
+      "GOBLET_ANEMO": "风伤杯",
+      "GOBLET_PHYSICAL": "物伤杯",
+      "GOBLET_ELECTRO": "雷伤杯",
+      "GOBLET_GEO": "岩伤杯",
+      "GOBLET_PYRO": "火伤杯",
+      "GOBLET_HYDRO": "水伤杯",
+      "GOBLET_DENDRO": "草伤杯",
+      "GOBLET_ATTACK_UP": "攻击杯",
+      "GOBLET_HP_UP": "生命杯",
+      "GOBLET_DEFENSE_UP": "防御杯",
+      "GOBLET_ELEMENTAL_MASTERY": "精通杯",
+      "CIRCLET_ATTACK_UP": "攻击头",
+      "CIRCLET_HP_UP": "生命头",
+      "CIRCLET_DEFENSE_UP": "防御头",
+      "CIRCLET_ELEMENTAL_MASTERY": "精通头",
+      "CIRCLET_HEALING_BONUS": "治疗头",
+      "CIRCLET_CRIT_RATE": "暴击头",
+      "CIRCLET_CRIT_DMG": "爆伤头",
       "ZHONGLI_CHAIR": "在？带我一个？我盾可厚"
     },
     "TIP": {
       "MAIN_HP_HP_HP_SUB_HPUP_GE_16_OR_HP_GE_20": "三生命主词条且副词小生命大于20%(当前{{HP}}%)或大生命大于16%(当前{{HP_UP}}%)"
     }
+  },
+  "TAG": {
+    "RAIDEN_ITTOU": "梦想一刀",
+    "RAIDEN_ISSHIN": "梦想一心",
+    "EULA_KOUKEN": "光降之剑"
+  },
+  "AUTO": {
+    "CALC": "计算",
+    "DONE": "计算完成！",
+    "FAILED": "计算失败。",
+    "TIPS": "注意：当词条数（本功能）以外的任何与目标计算相关的属性或增益发生变化时，请重新计算以获得精确结果。",
+    "MAX_CRIT_RATE": "暴击率上限",
+    "AUTO_PROGRESS": "词条数",
+    "DAMAGE_RATE": "伤害倍率",
+    "DAMAGE_BASE": "伤害基础",
+    "ELEMENT_TYPE": "元素类型加成",
+    "ATTACK_TYPE": "攻击类型加成",
+    "DAMAGE_TYPE": "最优伤害类型",
+    "DAMAGE_TAG": "伤害标签"
   }
 }
