--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -289,10 +289,60 @@
       "ATTACK_RARITY": "小攻擊成長: {{ATTACK}}%",
       "HP_RARITY": "小生命成長: {{HP}}%",
       "DEFENSE_RARITY": "小防禦成長: {{DEFENSE}}%",
+      "CRIT_RATE_AVERAGE": "暴擊率平均: {{CRIT_RATE_ACTUAL_STR}}",
+      "CRIT_DMG_AVERAGE": "暴擊傷害平均: {{CRIT_DMG_ACTUAL_STR}}",
+      "ELEMENTAL_MASTERY_AVERAGE": "精通平均: {{ELEMENTAL_MASTERY_ACTUAL_STR}}",
+      "ENERGY_RECHARGE_AVERAGE": "充能平均: {{ENERGY_RECHARGE_ACTUAL_STR}}",
+      "ATTACK_UP_AVERAGE": "大攻擊平均: {{ATTACK_UP_ACTUAL_STR}}",
+      "HP_UP_AVERAGE": "大生命平均: {{HP_UP_ACTUAL_STR}}",
+      "DEFENSE_UP_AVERAGE": "大防禦平均: {{DEFENSE_UP_ACTUAL_STR}}",
+      "SANDS_ATTACK_UP": "攻擊沙",
+      "SANDS_HP_UP": "生命沙",
+      "SANDS_DEFENSE_UP": "防禦沙",
+      "SANDS_ELEMENTAL_MASTERY": "精通沙",
+      "SANDS_ENERGY_RECHARGE": "充能沙",
+      "GOBLET_CRYO": "冰傷杯",
+      "GOBLET_ANEMO": "風傷杯",
+      "GOBLET_PHYSICAL": "物傷杯",
+      "GOBLET_ELECTRO": "雷傷杯",
+      "GOBLET_GEO": "岩傷杯",
+      "GOBLET_PYRO": "火傷杯",
+      "GOBLET_HYDRO": "水傷杯",
+      "GOBLET_DENDRO": "草傷杯",
+      "GOBLET_ATTACK_UP": "攻擊杯",
+      "GOBLET_HP_UP": "生命杯",
+      "GOBLET_DEFENSE_UP": "防禦杯",
+      "GOBLET_ELEMENTAL_MASTERY": "精通杯",
+      "CIRCLET_ATTACK_UP": "攻擊冠",
+      "CIRCLET_HP_UP": "生命冠",
+      "CIRCLET_DEFENSE_UP": "防禦冠",
+      "CIRCLET_ELEMENTAL_MASTERY": "精通冠",
+      "CIRCLET_HEALING_BONUS": "治療冠",
+      "CIRCLET_CRIT_RATE": "暴擊冠",
+      "CIRCLET_CRIT_DMG": "爆傷冠",
       "ZHONGLI_CHAIR": "以後大哥罩著你！"
     },
     "TIP": {
       "MAIN_HP_HP_HP_SUB_HPUP_GE_16_OR_HP_GE_20": "三生命主詞條且副詞小生命大於20%(當前{{HP}}%)或大生命大於16%(當前{{HP_UP}}%)"
     }
+  },
+  "TAG": {
+    "RAIDEN_ITTOU": "夢想一刀",
+    "RAIDEN_ISSHIN": "夢想一心",
+    "EULA_KOUKEN": "光降之劍"
+  },
+  "AUTO": {
+    "CALC": "計算",
+    "DONE": "計算完成！",
+    "FAILED": "計算失敗。",
+    "TIPS": "注意：當詞條數（本功能）以外的任何與目標計算相關的屬性或增益發生變化時，請重新計算以獲得精確結果。",
+    "MAX_CRIT_RATE": "暴擊率上限",
+    "AUTO_PROGRESS": "詞條數",
+    "DAMAGE_RATE": "傷害倍率",
+    "DAMAGE_BASE": "傷害基礎",
+    "ELEMENT_TYPE": "元素類型加成",
+    "ATTACK_TYPE": "攻擊類型加成",
+    "DAMAGE_TYPE": "最優傷害類型",
+    "DAMAGE_TAG": "傷害標簽"
   }
 }
