--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -289,10 +289,60 @@
       "ATTACK_RARITY": "Attack Growth: {{ATTACK}}%",
       "HP_RARITY": "HP Growth: {{HP}}%",
       "DEFENSE_RARITY": "Defense Growth: {{DEFENSE}}%",
+      "CRIT_RATE_AVERAGE": "CRIT Rate Average: {{CRIT_RATE_ACTUAL_STR}}",
+      "CRIT_DMG_AVERAGE": "CRIT DMG Average: {{CRIT_DMG_ACTUAL_STR}}",
+      "ELEMENTAL_MASTERY_AVERAGE": "Elemental Mastery Average: {{ELEMENTAL_MASTERY_ACTUAL_STR}}",
+      "ENERGY_RECHARGE_AVERAGE": "Recharge Average: {{ENERGY_RECHARGE_ACTUAL_STR}}",
+      "ATTACK_UP_AVERAGE": "Attack (UP) Average: {{ATTACK_UP_ACTUAL_STR}}",
+      "HP_UP_AVERAGE": "HP (UP) Average: {{HP_UP_ACTUAL_STR}}",
+      "DEFENSE_UP_AVERAGE": "Defense (UP) Average: {{DEFENSE_UP_ACTUAL_STR}}",
+      "SANDS_ATTACK_UP": "Attack Sands",
+      "SANDS_HP_UP": "HP Sands",
+      "SANDS_DEFENSE_UP": "Defense Sands",
+      "SANDS_ELEMENTAL_MASTERY": "Elemental Mastery Sands",
+      "SANDS_ENERGY_RECHARGE": "Recharge Sands",
+      "GOBLET_CRYO": "Cryo Goblet",
+      "GOBLET_ANEMO": "Anemo Goblet",
+      "GOBLET_PHYSICAL": "Physical Goblet",
+      "GOBLET_ELECTRO": "Electro Goblet",
+      "GOBLET_GEO": "Geo Goblet",
+      "GOBLET_PYRO": "Pyro Goblet",
+      "GOBLET_HYDRO": "Hydro Goblet",
+      "GOBLET_DENDRO": "Dendro Goblet",
+      "GOBLET_ATTACK_UP": "Attack Goblet",
+      "GOBLET_HP_UP": "HP Goblet",
+      "GOBLET_DEFENSE_UP": "Defense Goblet",
+      "GOBLET_ELEMENTAL_MASTERY": "Elemental Mastery Goblet",
+      "CIRCLET_ATTACK_UP": "Attack Circlet",
+      "CIRCLET_HP_UP": "HP Circlet",
+      "CIRCLET_DEFENSE_UP": "Defense Circlet",
+      "CIRCLET_ELEMENTAL_MASTERY": "Elemental Mastery Circlet",
+      "CIRCLET_HEALING_BONUS": "Healing Circlet",
+      "CIRCLET_CRIT_RATE": "CRIT Rate Circlet",
+      "CIRCLET_CRIT_DMG": "CRIT DMG Circlet",
       "ZHONGLI_CHAIR": "Maybe false damage but I have shield"
     },
     "TIP": {
       "MAIN_HP_HP_HP_SUB_HPUP_GE_16_OR_HP_GE_20": "1.Three Main HP 2.HP is greater than 20% (current {{HP}}%) OR HP (UP) is greater than 16% (current {{HP_UP}}%)"
     }
+  },
+  "TAG": {
+    "RAIDEN_ITTOU": "Musou Hitotachi",
+    "RAIDEN_ISSHIN": "Musou Isshin",
+    "EULA_KOUKEN": "Lightfall Sword"
+  },
+  "AUTO": {
+    "CALC": "Calculate",
+    "DONE": "Calculation completed!",
+    "FAILED": "Calculation failed.",
+    "TIPS": "Note: when any attribute or buff related to the target calculation other than the step of progress (this area) changes, please recalculate to obtain accurate results.",
+    "MAX_CRIT_RATE": "Maximum CRIT Rate",
+    "AUTO_PROGRESS": "Step of Progress",
+    "DAMAGE_RATE": "Damage Rate",
+    "DAMAGE_BASE": "Damage Base",
+    "ELEMENT_TYPE": "Element Type Bonus",
+    "ATTACK_TYPE": "Attack Type Bonus",
+    "DAMAGE_TYPE": "Target Damage Type",
+    "DAMAGE_TAG": "Damage Tag"
   }
 }
