--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -93,10 +93,10 @@
     "DMG_ANTI_PYRO": "火元素耐性",
     "DMG_ANTI_HYDRO": "水元素耐性",
     "DMG_ANTI_DENDRO": "草元素耐性",
-    "HP_BASE": "生命力ベース",
+    "HP_BASE": "HP力ベース",
     "ATTACK_BASE": "攻撃力ベース",
     "DEFENSE_BASE": "防御力ベース",
-    "HP_VAL_UP": "生命力数値アップ",
+    "HP_VAL_UP": "HP力数値アップ",
     "ATTACK_VAL_UP": "攻撃力数値アップ",
     "DEFENSE_VAL_UP": "防御力数値アップ",
     "DMG_BONUS_WEAPON": "武器ダメージ",
@@ -278,7 +278,7 @@
   },
   "CHIP": {
     "CONTENT": {
-      "ALL_RARITY": "レアリティ: {{ALL}}%",
+      "ALL_RARITY": "レア度: {{ALL}}%",
       "CRIT_RATE_RARITY": "会心率成長: {{CRIT_RATE}}%",
       "CRIT_DMG_RARITY": "会心ダメージ成長: {{CRIT_DMG}}%",
       "ELEMENTAL_MASTERY_RARITY": "元素熟知成長: {{ELEMENTAL_MASTERY}}%",
@@ -289,10 +289,60 @@
       "ATTACK_RARITY": "攻撃成長: {{ATTACK}}%",
       "HP_RARITY": "HP成長: {{HP}}%",
       "DEFENSE_RARITY": "防御成長: {{DEFENSE}}%",
+      "CRIT_RATE_AVERAGE": "会心率平均: {{CRIT_RATE_ACTUAL_STR}}",
+      "CRIT_DMG_AVERAGE": "会心ダメージ平均: {{CRIT_DMG_ACTUAL_STR}}",
+      "ELEMENTAL_MASTERY_AVERAGE": "元素熟知平均: {{ELEMENTAL_MASTERY_ACTUAL_STR}}",
+      "ENERGY_RECHARGE_AVERAGE": "チャージ効率平均: {{ENERGY_RECHARGE_ACTUAL_STR}}",
+      "ATTACK_UP_AVERAGE": "攻撃アップ平均: {{ATTACK_UP_ACTUAL_STR}}",
+      "HP_UP_AVERAGE": "HPアップ平均: {{HP_UP_ACTUAL_STR}}",
+      "DEFENSE_UP_AVERAGE": "防御アップ平均: {{DEFENSE_UP_ACTUAL_STR}}",
+      "SANDS_ATTACK_UP": "攻撃砂",
+      "SANDS_HP_UP": "HP砂",
+      "SANDS_DEFENSE_UP": "防御砂",
+      "SANDS_ELEMENTAL_MASTERY": "元素熟知砂",
+      "SANDS_ENERGY_RECHARGE": "チャージ砂",
+      "GOBLET_CRYO": "氷元素杯",
+      "GOBLET_ANEMO": "風元素杯",
+      "GOBLET_PHYSICAL": "物理杯",
+      "GOBLET_ELECTRO": "雷元素杯",
+      "GOBLET_GEO": "岩元素杯",
+      "GOBLET_PYRO": "火元素杯",
+      "GOBLET_HYDRO": "水元素杯",
+      "GOBLET_DENDRO": "草元素杯",
+      "GOBLET_ATTACK_UP": "攻撃杯",
+      "GOBLET_HP_UP": "HP杯",
+      "GOBLET_DEFENSE_UP": "防御杯",
+      "GOBLET_ELEMENTAL_MASTERY": "元素熟知杯",
+      "CIRCLET_ATTACK_UP": "攻撃冠",
+      "CIRCLET_HP_UP": "HP冠",
+      "CIRCLET_DEFENSE_UP": "防御冠",
+      "CIRCLET_ELEMENTAL_MASTERY": "元素熟知冠",
+      "CIRCLET_HEALING_BONUS": "治療冠",
+      "CIRCLET_CRIT_RATE": "会心率冠",
+      "CIRCLET_CRIT_DMG": "会心ダメージ冠",
       "ZHONGLI_CHAIR": "天丼ここにあり"
     },
     "TIP": {
       "MAIN_HP_HP_HP_SUB_HPUP_GE_16_OR_HP_GE_20": "1.HPメイン三つ有すること 2.HP成長が20%を超え(現在{{HP}}%)またはHPアップ成長が16%を超え(現在{{HP_UP}}%)ること"
     }
+  },
+  "TAG": {
+    "RAIDEN_ITTOU": "夢想の一刀",
+    "RAIDEN_ISSHIN": "夢想の一心",
+    "EULA_KOUKEN": "光臨の剣"
+  },
+  "AUTO": {
+    "CALC": "計算",
+    "DONE": "計算完了！",
+    "FAILED": "計算に失敗しました。",
+    "TIPS": "注：進行数（本機能）以外の最適するダメージの計算に関連する属性やバフが変化した場合、正確な結果を得るためには再計算する必要があります。",
+    "MAX_CRIT_RATE": "会心率上限",
+    "AUTO_PROGRESS": "進行数",
+    "DAMAGE_RATE": "ダメージ倍率",
+    "DAMAGE_BASE": "ダメージベース",
+    "ELEMENT_TYPE": "元素タイプボーナス",
+    "ATTACK_TYPE": "攻撃タイプボーナス",
+    "DAMAGE_TYPE": "最適するタイプ",
+    "DAMAGE_TAG": "ダメージタグ"
   }
 }
