--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -83,8 +83,10 @@
     "DMG_BONUS_NORMAL": "普通攻击伤害加成",
     "DMG_BONUS_CHARGED": "重击伤害加成",
     "DMG_BONUS_PLUNGING": "下落攻击伤害加成",
-    "DMG_BONUS_SKILL": "元素战技伤害加成",
-    "DMG_BONUS_SKILL_NILOU_MOON": "元素战技伤害加成(水月)",
+    "DMG_BONUS_SKILL": "元素技能伤害加成",
+    "DMG_BONUS_SKILL_NILOU_MOON": "元素技能伤害加成(水月)",
+    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害加成(灭净三业)",
+    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素技能伤害加成(飞星)",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆发伤害加成",
     "DMG_ANTI_CRYO": "冰元素抗性",
     "DMG_ANTI_ANEMO": "风元素抗性",
@@ -147,11 +149,12 @@
     "DMG_VAL_UP_DENDRO": "草元素伤害增加值",
     "DMG_VAL_UP_ALL": "全伤害增加值",
     "DMG_VAL_UP_NORMAL": "基本攻击伤害增加值",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻击伤害增加值（启途誓使）",
+    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻击伤害增加值(启途誓使)",
     "DMG_VAL_UP_CHARGED": "重击伤害增加值",
     "DMG_VAL_UP_PLUNGING": "落下攻击伤害增加值",
     "DMG_VAL_UP_SKILL": "元素技能伤害增加值",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能伤害增加值（落羽的裁择）",
+    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能伤害增加值(落羽的裁择)",
+    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素技能伤害增加值(飞星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆发伤害增加值",
     "DMG_VAL_UP_WEAPON": "武器伤害增加值",
     "DMG_VAL_UP_OTHER": "其他伤害增加值",
@@ -170,6 +173,7 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重击伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻击伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_SKILL": "元素技能伤害暴击率增加值",
+    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害暴击率增加值(灭净三业)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆发伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_WEAPON": "武器伤害暴击率增加值",
     "DMG_CRIT_RATE_UP_OTHER": "其他伤害暴击率增加值",
@@ -334,14 +338,16 @@
     "RAIDEN_ISSHIN": "梦想一心",
     "EULA_KOUKEN": "光降之剑",
     "CYNO_BOLT": "落羽的裁择",
-    "CYNO_Q": "启途誓使（普通攻击）",
-    "NILOU_MOON": "水月"
+    "CYNO_Q": "启途誓使(普通攻击)",
+    "NILOU_MOON": "水月",
+    "NAHIDA_TRI_KARMA": "灭净三业",
+    "LAYLA_SHOOTING_STAR": "飞星"
   },
   "AUTO": {
     "CALC": "计算",
     "DONE": "计算完成！",
     "FAILED": "计算失败。",
-    "TIPS": "注意：当词条数（本功能）以外的任何与目标计算相关的属性或增益发生变化时，请重新计算以获得精确结果。",
+    "TIPS": "注意：当词条数(本功能)以外的任何与目标计算相关的属性或增益发生变化时，请重新计算以获得精确结果。",
     "MAX_CRIT_RATE": "暴击率上限",
     "AUTO_PROGRESS": "词条数",
     "DAMAGE_RATE": "伤害倍率",
