--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -84,7 +84,9 @@
     "DMG_BONUS_CHARGED": "重撃ダメージ",
     "DMG_BONUS_PLUNGING": "落下攻撃ダメージ",
     "DMG_BONUS_SKILL": "元素スキルダメージ",
-    "DMG_BONUS_SKILL_NILOU_MOON": "元素战技伤害加成(水月)",
+    "DMG_BONUS_SKILL_NILOU_MOON": "元素スキルダメージ(水月)",
+    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素スキルダメージ(滅淨三業)",
+    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素スキルダメージ(飛星)",
     "DMG_BONUS_ELEMENTAL_BURST":"元素爆発ダメージ",
     "DMG_ANTI_CRYO": "氷元素耐性",
     "DMG_ANTI_ANEMO": "風元素耐性",
@@ -147,11 +149,12 @@
     "DMG_VAL_UP_DENDRO": "草元素ダメージアップ値",
     "DMG_VAL_UP_ALL": "全ダメージアップ値",
     "DMG_VAL_UP_NORMAL": "基本攻撃ダメージアップ値",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻击伤害增加值（启途誓使）",
+    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻撃ダメージアップ値(啓途誓使)",
     "DMG_VAL_UP_CHARGED": "重撃ダメージアップ値",
     "DMG_VAL_UP_PLUNGING": "落下攻撃ダメージアップ値",
     "DMG_VAL_UP_SKILL": "元素スキルダメージアップ値",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能伤害增加值（落羽的裁择）",
+    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素スキルダメージアップ値(落羽的裁择)",
+    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素スキルダメージアップ値(飛星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆発ダメージアップ値",
     "DMG_VAL_UP_WEAPON": "武器ダメージアップ値",
     "DMG_VAL_UP_OTHER": "その他ダメージアップ値",
@@ -170,6 +173,7 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重撃ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻撃ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_SKILL": "元素スキルダメージ会心率アップ値",
+    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素スキルダメージ会心率アップ値(滅淨三業)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆発ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_WEAPON": "武器ダメージ会心率アップ値",
     "DMG_CRIT_RATE_UP_OTHER": "その他ダメージ会心率アップ値",
@@ -334,14 +338,16 @@
     "RAIDEN_ISSHIN": "夢想の一心",
     "EULA_KOUKEN": "光臨の剣",
     "CYNO_BOLT": "落羽的裁择",
-    "CYNO_Q": "启途誓使（普通攻击）",
-    "NILOU_MOON": "水月"
+    "CYNO_Q": "啓途誓使(通常攻撃)",
+    "NILOU_MOON": "水月",
+    "NAHIDA_TRI_KARMA": "滅浄三業",
+    "LAYLA_SHOOTING_STAR": "飛星"
   },
   "AUTO": {
     "CALC": "計算",
     "DONE": "計算完了！",
     "FAILED": "計算に失敗しました。",
-    "TIPS": "注：進行数（本機能）以外の最適するダメージの計算に関連する属性やバフが変化した場合、正確な結果を得るためには再計算する必要があります。",
+    "TIPS": "注：進行数(本機能)以外の最適するダメージの計算に関連する属性やバフが変化した場合、正確な結果を得るためには再計算する必要があります。",
     "MAX_CRIT_RATE": "会心率上限",
     "AUTO_PROGRESS": "進行数",
     "DAMAGE_RATE": "ダメージ倍率",
