--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -83,8 +83,10 @@
     "DMG_BONUS_NORMAL": "普通攻擊傷害加成",
     "DMG_BONUS_CHARGED": "重擊傷害加成",
     "DMG_BONUS_PLUNGING": "下落攻擊傷害加成",
-    "DMG_BONUS_SKILL": "元素戰技傷害加成",
-    "DMG_BONUS_SKILL_NILOU_MOON": "元素战技伤害加成(水月)",
+    "DMG_BONUS_SKILL": "元素技能傷害加成",
+    "DMG_BONUS_SKILL_NILOU_MOON": "元素技能傷害加成(水月)",
+    "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素技能傷害加成(滅淨三業)",
+    "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素技能傷害加成(飛星)",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆發傷害加成",
     "DMG_ANTI_CRYO": "冰元素抗性",
     "DMG_ANTI_ANEMO": "風元素抗性",
@@ -147,11 +149,12 @@
     "DMG_VAL_UP_DENDRO": "草元素傷害增加值",
     "DMG_VAL_UP_ALL": "全傷害增加值",
     "DMG_VAL_UP_NORMAL": "基本攻擊傷害增加值",
-    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻击伤害增加值（启途誓使）",
+    "DMG_VAL_UP_NORMAL_CYNO_Q": "基本攻擊傷害增加值(啟途誓使)",
     "DMG_VAL_UP_CHARGED": "重擊傷害增加值",
     "DMG_VAL_UP_PLUNGING": "落下攻擊傷害增加值",
     "DMG_VAL_UP_SKILL": "元素技能傷害增加值",
-    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能伤害增加值（落羽的裁择）",
+    "DMG_VAL_UP_SKILL_CYNO_BOLT": "元素技能傷害增加值(落羽的裁择)",
+    "DMG_VAL_UP_SKILL_LAYLA_SHOOTING_STAR": "元素技能傷害增加值(飛星)",
     "DMG_VAL_UP_ELEMENTAL_BURST": "元素爆發傷害增加值",
     "DMG_VAL_UP_WEAPON": "武器傷害增加值",
     "DMG_VAL_UP_OTHER": "其他傷害增加值",
@@ -170,6 +173,7 @@
     "DMG_CRIT_RATE_UP_CHARGED": "重擊傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_PLUNGING": "落下攻擊傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_SKILL": "元素技能傷害暴擊率增加值",
+    "DMG_CRIT_RATE_UP_SKILL_NAHIDA_TRI_KARMA": "元素技能傷害暴擊率增加值(滅淨三業)",
     "DMG_CRIT_RATE_UP_ELEMENTAL_BURST": "元素爆發傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_WEAPON": "武器傷害暴擊率增加值",
     "DMG_CRIT_RATE_UP_OTHER": "其他傷害暴擊率增加值",
@@ -334,14 +338,16 @@
     "RAIDEN_ISSHIN": "夢想一心",
     "EULA_KOUKEN": "光降之劍",
     "CYNO_BOLT": "落羽的裁择",
-    "CYNO_Q": "启途誓使（普通攻击）",
-    "NILOU_MOON": "水月"
+    "CYNO_Q": "啟途誓使(普通攻擊)",
+    "NILOU_MOON": "水月",
+    "NAHIDA_TRI_KARMA": "滅淨三業",
+    "LAYLA_SHOOTING_STAR": "飛星"
   },
   "AUTO": {
     "CALC": "計算",
     "DONE": "計算完成！",
     "FAILED": "計算失敗。",
-    "TIPS": "注意：當詞條數（本功能）以外的任何與目標計算相關的屬性或增益發生變化時，請重新計算以獲得精確結果。",
+    "TIPS": "注意：當詞條數(本功能)以外的任何與目標計算相關的屬性或增益發生變化時，請重新計算以獲得精確結果。",
     "MAX_CRIT_RATE": "暴擊率上限",
     "AUTO_PROGRESS": "詞條數",
     "DAMAGE_RATE": "傷害倍率",
