--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -360,5 +360,8 @@
     "ATTACK_TYPE": "攻撃タイプボーナス",
     "DAMAGE_TYPE": "最適するタイプ",
     "DAMAGE_TAG": "ダメージタグ"
+  },
+  "SW":{
+    "READY": "データ更新完了！;;リロード"
   }
 }
