--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -363,5 +363,13 @@
   },
   "SW":{
     "READY": "データ更新完了！;;リロード"
+  },
+  "DESC":{
+    "GOLDEN_MAJESTY":{
+      "WITH_SHIELD": "シールドの場合のバフ（前のバフとの間で1つを選択）"
+    },
+    "TRAVELER":{
+      "PROUDSKILL_2": "豊穰の勾玉（単位：枚）の数を吸収することで元素チャージ効率の追加分"
+    }
   }
 }
