--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -363,5 +363,13 @@
   },
   "SW":{
     "READY": "数据更新完成!;;重新加载"
+  },
+  "DESC":{
+    "GOLDEN_MAJESTY":{
+      "WITH_SHIELD": "护盾情况下的加成（与上一个BUFF选择其一设置）"
+    },
+    "TRAVELER":{
+      "PROUDSKILL_2": "吸收丰穰勾玉数额外的加成充能（单位：个）"
+    }
   }
 }
