fix defense ignore calculation

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -217,6 +217,12 @@
     "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "敌人防御减少(落下攻击)",
     "DMG_ENEMY_DEFENSE_DOWN_SKILL": "敌人防御减少(元素技能)",
     "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "敌人防御减少(元素爆发)",
+    "DMG_ENEMY_DEFENSE_IGNORE": "敌人防御无视",
+    "DMG_ENEMY_DEFENSE_IGNORE_NORMAL": "敌人防御无视(基本攻击)",
+    "DMG_ENEMY_DEFENSE_IGNORE_CHARGED": "敌人防御无视(重击)",
+    "DMG_ENEMY_DEFENSE_IGNORE_PLUNGING": "敌人防御无视(落下攻击)",
+    "DMG_ENEMY_DEFENSE_IGNORE_SKILL": "敌人防御无视(元素技能)",
+    "DMG_ENEMY_DEFENSE_IGNORE_ELEMENTAL_BURST": "敌人防御无视(元素爆发)",
     "SHIELD_BONUS_NORMAL": "普攻盾量加成",
     "SHIELD_BONUS_SKILL": "元素技能盾量加成",
     "SHIELD_BONUS_ELEMENTAL_BURST": "元素爆发盾量加成",
