--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -217,6 +217,12 @@
     "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "敵人防禦減少(落下攻擊)",
     "DMG_ENEMY_DEFENSE_DOWN_SKILL": "敵人防禦減少(元素技能)",
     "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "敵人防禦減少(元素爆發)",
+    "DMG_ENEMY_DEFENSE_IGNORE": "敵人防禦無視",
+    "DMG_ENEMY_DEFENSE_IGNORE_NORMAL": "敵人防禦無視(基本攻擊)",
+    "DMG_ENEMY_DEFENSE_IGNORE_CHARGED": "敵人防禦無視(重擊)",
+    "DMG_ENEMY_DEFENSE_IGNORE_PLUNGING": "敵人防禦無視(落下攻擊)",
+    "DMG_ENEMY_DEFENSE_IGNORE_SKILL": "敵人防禦無視(元素技能)",
+    "DMG_ENEMY_DEFENSE_IGNORE_ELEMENTAL_BURST": "敵人防禦無視(元素爆發)",
     "SHIELD_BONUS_NORMAL": "普攻盾量加成",
     "SHIELD_BONUS_SKILL": "元素技能盾量加成",
     "SHIELD_BONUS_ELEMENTAL_BURST": "元素爆發盾量加成",
