--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -217,6 +217,12 @@
     "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "Enemy Defense Reduce (Plunging)",
     "DMG_ENEMY_DEFENSE_DOWN_SKILL": "Enemy Defense Reduce (Skill)",
     "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "Enemy Defense Reduce (Elemental Burst)",
+    "DMG_ENEMY_DEFENSE_IGNORE": "Enemy Defense Ignore",
+    "DMG_ENEMY_DEFENSE_IGNORE_NORMAL": "Enemy Defense Ignore (Normal)",
+    "DMG_ENEMY_DEFENSE_IGNORE_CHARGED": "Enemy Defense Ignore (Charged)",
+    "DMG_ENEMY_DEFENSE_IGNORE_PLUNGING": "Enemy Defense Ignore (Plunging)",
+    "DMG_ENEMY_DEFENSE_IGNORE_SKILL": "Enemy Defense Ignore (Skill)",
+    "DMG_ENEMY_DEFENSE_IGNORE_ELEMENTAL_BURST": "Enemy Defense Ignore (Elemental Burst)",
     "SHIELD_BONUS_NORMAL": "Normal Shield Bonus",
     "SHIELD_BONUS_SKILL": "Normal Shield Bonus",
     "SHIELD_BONUS_ELEMENTAL_BURST": "Elemental Burst Shield Bonus",
