--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -217,6 +217,12 @@
     "DMG_ENEMY_DEFENSE_DOWN_PLUNGING": "敵防御マイナス(落下攻撃)",
     "DMG_ENEMY_DEFENSE_DOWN_SKILL": "敵防御マイナス(元素スキル)",
     "DMG_ENEMY_DEFENSE_DOWN_ELEMENTAL_BURST": "敵防御マイナス(元素爆発)",
+    "DMG_ENEMY_DEFENSE_IGNORE": "敵防御無視",
+    "DMG_ENEMY_DEFENSE_IGNORE_NORMAL": "敵防御無視(基本攻撃)",
+    "DMG_ENEMY_DEFENSE_IGNORE_CHARGED": "敵防御無視(重撃)",
+    "DMG_ENEMY_DEFENSE_IGNORE_PLUNGING": "敵防御無視(落下攻撃)",
+    "DMG_ENEMY_DEFENSE_IGNORE_SKILL": "敵防御無視(元素スキル)",
+    "DMG_ENEMY_DEFENSE_IGNORE_ELEMENTAL_BURST": "敵防御無視(元素爆発)",
     "SHIELD_BONUS_NORMAL": "基本シールド",
     "SHIELD_BONUS_SKILL": "元素スキルシールド",
     "SHIELD_BONUS_ELEMENTAL_BURST": "元素爆発シールド",
