fix Kazuha C6 with Nahida's proudSkill, distinguish buff dispaly title by type

--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -273,7 +273,9 @@
       "HEALING": "治疗值",
       "PRODUCT": "创造物生命值",
       "SHIELD": "盾量",
-      "BUFF": "增益",
+      "BUFF": "增益(仅自身)",
+      "TEAM_BUFF": "增益(全队)",
+      "ONLY_OTHER_BUFF": "增益(仅队友)",
       "OVERRIDE_ELEMENT": "附魔",
       "DEFAULT_ELEMENT": "默认",
       "DMG_BONUS_CRYO": "冰元素附魔",
