--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -273,7 +273,9 @@
       "HEALING": "治療值",
       "PRODUCT": "創造物生命值",
       "SHIELD": "盾量",
-      "BUFF": "增益",
+      "BUFF": "增益(僅自身)",
+      "TEAM_BUFF": "增益(全隊)",
+      "ONLY_OTHER_BUFF": "增益(僅隊友)",
       "OVERRIDE_ELEMENT": "附魔",
       "DEFAULT_ELEMENT": "默認",
       "DMG_BONUS_CRYO": "冰元素附魔",
