--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -273,7 +273,9 @@
       "HEALING": "Healing",
       "PRODUCT": "Production HP",
       "SHIELD": "Shield HP",
-      "BUFF": "Buff",
+      "BUFF": "Buff (Only Self)",
+      "TEAM_BUFF": "Buff (All Team)",
+      "ONLY_OTHER_BUFF": "Buff (Only Teammate)",
       "OVERRIDE_ELEMENT": "Override Element",
       "DEFAULT_ELEMENT": "Default",
       "DMG_BONUS_CRYO": "Cryo",
