--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -273,7 +273,9 @@
       "HEALING": "治療",
       "PRODUCT": "創造物HP",
       "SHIELD": "シールドHP",
-      "BUFF": "バフ",
+      "BUFF": "バフ(自身のみ)",
+      "TEAM_BUFF": "バフ(チーム全体)",
+      "ONLY_OTHER_BUFF": "バフ(チームメンバーのみ)",
       "OVERRIDE_ELEMENT": "元素付与",
       "DEFAULT_ELEMENT": "デフォルト",
       "DMG_BONUS_CRYO": "氷",
