--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -386,5 +386,14 @@
     "TRAVELER":{
       "PROUDSKILL_2": "豊穰の勾玉（単位：枚）の数を吸収することで元素チャージ効率の追加分"
     }
+  },
+  "MENU":{
+    "DELETE_CACHE":{
+      "TITLE": "キャラクタデータの消去",
+      "WANRING": "キャラクター「{{NAME}}」のすべてのデータをクリアしますか。",
+      "OK": "OK",
+      "CANCEL": "キャンセル",
+      "SUCCESS": "「{{NAME}}」のデータがリセットされました。"
+    }
   }
 }
