--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -394,6 +394,10 @@
       "OK": "确定",
       "CANCEL": "取消",
       "SUCCESS": "已重置「{{NAME}}」的数据！"
+    },
+    "MANUAL":{
+      "TITLE": "使用指南",
+      "OK": "确认"
     }
   }
 }
