--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -394,6 +394,10 @@
       "OK": "確定",
       "CANCEL": "取消",
       "SUCCESS": "已重置「{{NAME}}」的數據！"
+    },
+    "MANUAL":{
+      "TITLE": "使用指南",
+      "OK": "確認"
     }
   }
 }
