--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -394,6 +394,10 @@
       "OK": "OK",
       "CANCEL": "Cancel",
       "SUCCESS": "The data of「{{NAME}}」has been reset!"
+    },
+    "MANUAL":{
+      "TITLE": "Guide",
+      "OK": "Confirm"
     }
   }
 }
