--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -389,11 +389,15 @@
   },
   "MENU":{
     "DELETE_CACHE":{
-      "TITLE": "キャラクタデータの消去",
+      "TITLE": "キャラクタデータ消去",
       "WANRING": "キャラクター「{{NAME}}」のすべてのデータをクリアしますか。",
       "OK": "OK",
       "CANCEL": "キャンセル",
       "SUCCESS": "「{{NAME}}」のデータがリセットされました。"
+    },
+    "MANUAL":{
+      "TITLE": "利用ガイド",
+      "OK": "確認"
     }
   }
 }
