--- a/src/assets/i18n/cn_sim.json
+++ b/src/assets/i18n/cn_sim.json
@@ -86,6 +86,7 @@
     "DMG_BONUS_SKILL": "元素技能伤害加成",
     "DMG_BONUS_SKILL_NILOU_MOON": "元素技能伤害加成(水月)",
     "DMG_BONUS_SKILL_NAHIDA_TRI_KARMA": "元素技能伤害加成(灭净三业)",
+    "DMG_BONUS_SKILL_ALHAITHAM_MIRROR": "元素技能伤害加成(光幕)",
     "DMG_BONUS_SKILL_LAYLA_SHOOTING_STAR": "元素技能伤害加成(飞星)",
     "DMG_BONUS_ELEMENTAL_BURST": "元素爆发伤害加成",
     "DMG_ANTI_CRYO": "冰元素抗性",
@@ -274,6 +275,7 @@
       "PRODUCT": "创造物生命值",
       "SHIELD": "盾量",
       "BUFF": "增益(仅自身)",
+      "BUFF_MULT": "增益(多重)",
       "TEAM_BUFF": "增益(全队)",
       "ONLY_OTHER_BUFF": "增益(仅队友)",
       "OVERRIDE_ELEMENT": "附魔",
@@ -351,7 +353,8 @@
     "NILOU_MOON": "水月",
     "NAHIDA_TRI_KARMA": "灭净三业",
     "LAYLA_SHOOTING_STAR": "飞星",
-    "FISCHL_OZ": "奥兹(召唤)"
+    "FISCHL_OZ": "奥兹(召唤)",
+    "ALHAITHAM_MIRROR": "光幕"
   },
   "AUTO": {
     "CALC": "计算",
