--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -393,10 +393,13 @@
   "MENU":{
     "DELETE_CACHE":{
       "TITLE": "キャラクターデータ消去",
-      "WANRING": "キャラクター「{{NAME}}」のすべてのデータをクリアしますか。",
+      "ALL_TITLE": "データ消去",
+      "WANRING": "キャラクター「{{NAME}}」のすべてのデータをクリアしてよろしいですか。",
+      "ALL_WANRING": "すべてのデータをクリアしてよろしいですか。",
       "OK": "OK",
       "CANCEL": "キャンセル",
-      "SUCCESS": "「{{NAME}}」のデータがリセットされました。"
+      "SUCCESS": "「{{NAME}}」のデータがリセットされました。",
+      "ALL_SUCCESS": "すべてのデータがリセットされました。"
     },
     "MANUAL":{
       "TITLE": "利用ガイド",
