--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -292,6 +292,7 @@
   },
   "ENKA": {
     "DONE": "Data processing completed!",
+    "DONE_ZERO": "No character in public display.",
     "FAILED": "Processing failed."
   },
   "CHIP": {
