--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -292,6 +292,7 @@
   },
   "ENKA": {
     "DONE": "データ処理完了！",
+    "DONE_ZERO": "公開展示中のキャラクターはいませんでした。",
     "FAILED": "処理に失敗しました。"
   },
   "CHIP": {
