--- a/src/assets/i18n/cn_tra.json
+++ b/src/assets/i18n/cn_tra.json
@@ -63,8 +63,8 @@
     "ATTACK": "攻擊力",
     "DEFENSE": "防禦力",
     "HP_UP": "生命值百分比",
-    "ATTACK_UP": "攻擊百分比",
-    "DEFENSE_UP": "防禦百分比",
+    "ATTACK_UP": "攻擊力百分比",
+    "DEFENSE_UP": "防禦力百分比",
     "CRIT_RATE": "暴擊率",
     "CRIT_DMG": "暴擊傷害",
     "ENERGY_RECHARGE": "元素充能效率",
