--- a/src/assets/i18n/jp.json
+++ b/src/assets/i18n/jp.json
@@ -97,10 +97,10 @@
     "DMG_ANTI_PYRO": "火元素耐性",
     "DMG_ANTI_HYDRO": "水元素耐性",
     "DMG_ANTI_DENDRO": "草元素耐性",
-    "HP_BASE": "HP力ベース",
+    "HP_BASE": "HPベース",
     "ATTACK_BASE": "攻撃力ベース",
     "DEFENSE_BASE": "防御力ベース",
-    "HP_VAL_UP": "HP力数値アップ",
+    "HP_VAL_UP": "HP数値アップ",
     "ATTACK_VAL_UP": "攻撃力数値アップ",
     "DEFENSE_VAL_UP": "防御力数値アップ",
     "DMG_BONUS_WEAPON": "武器ダメージ",
